# operator

./: .gitignore  README.md  launcher.py  package-lock.json  package.json  setup.bat  start.bat
app/api/export-in-details/: route.ts
backend/: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
backend/app/: __init__.py  config.py
backend/app/routes/: csv_operations.py  dashboard_operations.py  database_operations.py  file_processing.py  index.py
backend/app/utils/: enhanced_fraud_detector.py  helpers.py  phone_operator.py
backend/docker/: Dockerfile
backend/src/: main.py  setup_docker.py
backend/src/app/: api.py
backend/src/app/routes/: csv_query.py  file_processing.py
backend/src/executables/: data_processor  data_processor.c  data_processor_linux_arm
backend/src/utils/: helpers.py  settings.py
components/: chart.tsx  data-filter.tsx  data-stats.tsx  data-table.tsx  import-dialog.tsx
frontend/: next.config.mjs  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: LoadDataModal.tsx  ProgressIndicator.tsx  action-bar.tsx  chart.tsx  data-filter.tsx  data-stats.tsx  data-table.tsx  file-size-warning.tsx  file-splitter.tsx  import-dialog.tsx  manual-completion-dialog.tsx  notifications-dropdown.tsx  retry-part-dialog.tsx  server-status-indicator.tsx
frontend/hooks/: use-data.ts  use-toast.ts
frontend/lib/: data.ts  db.ts  import.ts  mock-data.ts  notifications.ts
lib/: export.ts  import.ts
scripts/: setup.sh  start.sh
(+5 files in other folders)
